--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,22 +1,9 @@
 /* THIS FILE IS JUST FOR EXAMPLES, DELETE IT IF YOU DON'T NEED IT */
 
 /* SHELL ---------------------------------------- */
-html {
-  font-family:
-    ui-sans-serif,
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Helvetica Neue',
-    Arial,
-    'Noto Sans',
-    sans-serif,
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol',
-    'Noto Color Emoji';
+html,
+* {
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -29,6 +16,19 @@ body {
   position: absolute;
   bottom: 12px;
   right: 12px;
+}
+
+.green {
+  background: #193d19;
+}
+
+.purple {
+  background: #410e9a;
+}
+
+.white {
+  background: #f5f5f5;
+  color: black;
 }
 
 .nav svg {
