--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,7 @@
 }
 
 html {
+  caret-color: transparent;
   line-height: 1;
   -webkit-text-size-adjust: 100%;
   -moz-tab-size: 4;
@@ -58,6 +59,7 @@ html {
   -o-tab-size: 4;
   tab-size: 4;
   font-family:
+    'Inter',
     ui-sans-serif,
     system-ui,
     -apple-system,
