--- a/src/routes/1/2/styles.css
+++ b/src/routes/1/2/styles.css
@@ -2,6 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
 }
