--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -31,6 +31,49 @@ body {
   color: black;
 }
 
+.sekoia {
+  background: #992a85;
+}
+
 .nav svg {
   color: white;
+}
+
+.notification {
+  position: absolute;
+  box-shadow: rgb(45 46 131 / .16) 0 8px 16px;
+  bottom: 10px;
+  padding: 16px;
+  max-width: 468px;
+  background: #f5dce2;
+  color: #21225f;
+  border-radius: 8px;
+  margin: 0 auto;
+  left: calc(50% - 234px);
+  display: flex;
+  font-family: 'Poppins', sans-serif;
+}
+
+.notification .title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-top: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+.notification .description {
+  font-size: .75rem;
+  line-height: 2;
+  font-family: 'Poppins', sans-serif;
+}
+
+.overflow {
+  overflow: hidden;
+  margin-left: 8px;
+}
+
+.notification svg {
+  min-width: 18px;
+  min-height: 18px;
 }
